# data-visualizations

./: blueripple-data-visualizations.cabal  cabal.project
src/BlueRipple/Data/Visualization/: DemoCompChart.hs  DemoComparison.hs
src/BlueRipple/Utilities/: HvegaJsonData.hs
