cabal-version: 3.0

name:           blueripple-data-visualizations
version:        0.1.0.0
synopsis:       data-loading utilities
category:       Data
homepage:       https://github.com/blueripple/data-visualizations#readme
bug-reports:    https://github.com/blueripple/data-visualizations/issues
author:         Adam Conner-Sax
maintainer:     adam@blueripplepolitics.org
copyright:      2024 Adam Conner-Sax
license:        BSD-3-Clause
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/blueripple/data-visualizations

library
  exposed-modules: BlueRipple.Data.Visualization.DemoCompChart, BlueRipple.Data.Visualization.DemoComparison
  hs-source-dirs: src
  ghc-options: -Wall -O2 -fno-warn-unused-top-binds -funbox-strict-fields
  build-depends:
     blueripple-data-tools
   , array  >= 0.4 && < 0.6
   , Frames >= 0.7 && < 0.8
--    , Frames-map-reduce
   , Frames-utils >= 0.3.1
   , Frames-streamly >= 0.2
   , Frames-serialize >= 0.1.0
   , flat >= 0.5 && < 0.7
   , hvega >= 0.12 && < 0.13
   , hvega-utils >= 0.3 && < 0.4
   , base >=4.12.0 && <5
   , containers >=0.5.0 && <0.8
   , directory >=1.3.3.0 && <1.4.0.0
   , foldl >= 1.4 && < 1.5
   , knit-haskell >= 0.8 && < 0.11
   , map-reduce-folds >= 0.1.1.1 && < 0.2
   , Frames-map-reduce >= 0.4 && < 0.5
   , mtl >= 2.2 && < 2.4
   , mwc-random >= 0.14 && < 0.16
   , polysemy >=1.2 && < 1.10
   , polysemy-plugin >= 0.4.5
   , relude >= 1.0.0 && < 1.3
   , text >=1.2.3 && < 2.2
   , vector >= 0.12 && < 0.14
   , vinyl >= 0.13 && < 0.15
   , streamly >=0.9 && <0.11
   , streamly-core >=0.1.0 && <0.3
   , streamly-bytestring >=0.2.0 && < 0.3

  mixins:  base hiding (Prelude)
         , relude (Relude as Prelude
         , Relude.Extra)
  default-language: Haskell2010
